ui: larger, monospace editor font, spacing fixes

--- a/src/style.css
+++ b/src/style.css
@@ -12,3 +12,7 @@
 .user-counter {
   font-weight: bold;
 }
+
+.editor {
+  font-size: 24px;
+}
